# noir

./: .gitignore  Cargo.toml  EXTERNAL_NOIR_LIBRARIES.yml  package.json
.github/: benchmark_projects.yml
acvm-repo/acir/codegen/: acir.cpp
acvm-repo/acir_field/src/: generic_ark.rs
acvm-repo/acvm/src/pwg/: brillig.rs  mod.rs
acvm-repo/acvm/tests/: solver.rs
acvm-repo/brillig/src/: black_box.rs  opcodes.rs
acvm-repo/brillig_vm/src/: black_box.rs  lib.rs
compiler/fm/src/: lib.rs
compiler/noirc_driver/src/: lib.rs
compiler/noirc_errors/: Cargo.toml
compiler/noirc_errors/src/: debug_info.rs  position.rs
compiler/noirc_evaluator/src/: ssa.rs
compiler/noirc_evaluator/src/brillig/: brillig_ir.rs
compiler/noirc_evaluator/src/brillig/brillig_gen/: brillig_black_box.rs  brillig_block.rs
compiler/noirc_evaluator/src/brillig/brillig_ir/: brillig_variable.rs  debug_show.rs  entry_point.rs
compiler/noirc_evaluator/src/ssa/acir_gen/: mod.rs
compiler/noirc_evaluator/src/ssa/ssa_gen/: mod.rs
compiler/noirc_frontend/src/: lib.rs
compiler/noirc_frontend/src/debug/: ast.rs  mod.rs
compiler/noirc_frontend/src/hir/: mod.rs
compiler/noirc_frontend/src/hir/def_collector/: dc_mod.rs
compiler/noirc_frontend/src/hir/def_map/: mod.rs
compiler/noirc_frontend/src/hir_def/: types.rs
compiler/noirc_frontend/src/monomorphization/: ast.rs  debug_types.rs  mod.rs
compiler/noirc_printable_type/src/: lib.rs
docs/docs/how_to/debugger/: debugging_with_the_repl.md  debugging_with_vs_code.md
docs/docs/reference/debugger/: debugger_repl.md  debugger_vscode.md
tooling/debugger/: Cargo.toml  README.md  build.rs  ignored-noir-tests.txt
tooling/debugger/src/: context.rs  dap.rs  debug.rs  foreign_calls.rs  lib.rs  repl.rs  source_code_printer.rs
tooling/debugger/src/repl/: mod.rs  repl_debugger.rs
tooling/debugger/tests/: debug.rs
tooling/debugger_wasm/: Cargo.toml  README.md  buildPhaseCargoCommand.sh  installPhase.sh  package.json  web-test-runner.config.mjs
tooling/debugger_wasm/src/: errors.rs  lib.rs
tooling/debugger_wasm/test/node/: Counter.json  debugger.test.ts
tooling/lsp/src/requests/: code_lens_request.rs  test_run.rs
tooling/nargo/src/: errors.rs  lib.rs
tooling/nargo/src/artifacts/: debug.rs  debug_vars.rs
tooling/nargo/src/foreign_calls/: default.rs  rpc.rs
tooling/nargo/src/ops/: compile.rs  debug.rs  execute.rs  foreign_calls.rs  mod.rs  test.rs
tooling/nargo_cli/src/: errors.rs
tooling/nargo_cli/src/cli/: compile_cmd.rs  dap_cmd.rs  debug_cmd.rs  execution_helpers.rs  export_cmd.rs  mod.rs  test_cmd.rs
tooling/nargo_cli/src/cli/test_cmd/: formatters.rs
(+2 files in other folders)
