[package]
name = "noir_debugger"
description = "Debugger for Noir"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm.workspace = true
nargo.workspace = true
noirc_printable_type.workspace = true
noirc_errors.workspace = true
thiserror.workspace = true
codespan-reporting.workspace = true
mini_async_repl = "0.2.1"
owo-colors = "3"
tokio = { version = "1", features = ["full"] }
barretenberg_blackbox_solver.workspace = true
noirc_driver.workspace = true