[package]
name = "debugger_wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# [build]
# target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
acvm.workspace = true
acvm_blackbox_solver.workspace = true
barretenberg_blackbox_solver.workspace = true
base64.workspace = true
fm.workspace = true
nargo.workspace = true
noir_debugger.workspace = true
noirc_driver.workspace = true
noirc_errors.workspace = true
iter-extended.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde.workspace = true
serde_json.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
gloo-utils.workspace = true
flate2 = "1.0.24"

# This is an unused dependency, we are adding it
# so that we can enable the js feature in getrandom.
getrandom = { workspace = true, features = ["js"] }

[build-dependencies]
build-data.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
